--- a/index.html
+++ b/index.html
@@ -19,41 +19,47 @@
         </ul>
     </header>
     <section class="above-fold">
-        <h1>This website is awesome</h1>
-        <p>This website...</p>
-        <button>Sign up</button>
-        <img src="" alt="">
+        <div class="wrapper">
+            <h1>This website is awesome</h1>
+            <p>This website...</p>
+            <button>Sign up</button>
+        </div>
+        <img src="https://placehold.jp/1600x900.png" alt="">
     </section>
     <section class="below-fold">
         <h2>Random info</h2>
         <div class="container">
-            <figure><img src="" alt="">
-                <figcaption></figcaption>
+            <figure><img src="https://placehold.jp/300x300.png" alt="">
+                <figcaption>Caption 1</figcaption>
             </figure>
-            <figure><img src="" alt="">
-                <figcaption></figcaption>
+            <figure><img src="https://placehold.jp/300x300.png" alt="">
+                <figcaption>Caption 2</figcaption>
             </figure>
-            <figure><img src="" alt="">
-                <figcaption></figcaption>
+            <figure><img src="https://placehold.jp/300x300.png" alt="">
+                <figcaption>Caption 3</figcaption>
             </figure>
-            <figure><img src="" alt="">
-                <figcaption></figcaption>
+            <figure><img src="https://placehold.jp/300x300.png" alt="">
+                <figcaption>Caption 4</figcaption>
             </figure>
         </div>
         <div class="blockquote">
-            <p class="quote"></p>
-            <p class="source"></p>
+            <div class="quote-wrapper">
+                <p class="quote">Quote</p>
+                <p class="source">-Source</p>
+            </div>
         </div>
         <div class="cta">
             <div class="box">
-                <h3></h3>
-                <p></p>
-                <button></button>
+                <div class="left">
+                    <h3>Call to Action!</h3>
+                    <p>Sign up for our product!</p>
+                </div>
+                <button>Sign up</button>
             </div>
         </div>
     </section>
     <footer>
-        
+        Copyright
     </footer>
 </body>
 
